--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,8 @@
 
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
         android:allowBackup="true"
@@ -22,7 +24,10 @@
         <service
             android:name=".MyIntentService"
             android:exported="false" />
+
         <service android:name=".MyLocationService" />
+
+        <service android:name=".MyDownloadService" />
 
         <activity
             android:name=".LocationServiceActivity"
